# vistafetch

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-compliance.yml  pr-linting.yml  release.yml
tests/model/: test_base.py  test_search_result.py
tests/model/asset/: test_financial_asset.py  test_financial_data.py
tests/test_utils/: requests_utils.py
vistafetch/: __init__.py  client.py  logs.py  session.py
vistafetch/model/: __init__.py  base.py  search_result.py
vistafetch/model/asset/: __init__.py  bond.py  derivative.py  financial_asset.py  financial_asset_type.py  financial_data.py  fund.py  index.py  metal.py  stock.py
