[tool.poetry]
name = "vistafetch"
version = "0.0.0"
description = "Small & simple library to fetch financial data for stocks, ETFs, funds, etc. from Onvista"
authors = ["bossenti <bossenti@apache.org>"]
license = "Apache 2.0"
readme = "README.md"

keywords = [
    "etf",
    "exchange",
    "financial-data",
    "funds",
    "onvista",
    "stocks"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment"
]

include = [
    { path = "vistafetch/py.typed" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pydantic = ">=2.0.0"
requests = ">=2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
mypy = "1.5.1"
pre-commit = "3.3.3"
pytest = "7.4.0"
pytest-cov = "4.1.0"
ruff = "0.0.285"

[tool.ruff]
select = ["C90", "D", "E", "F", "I", "ICN", "N", "UP"]
ignore = [
    "D211", # ignore in favour of D203
    "D213", # ignore in favour of D212
]

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["D100", "D103", "D104"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
